--- a/global.css
+++ b/global.css
@@ -4,6 +4,7 @@
 
 
   body {
-    background-color:darkslategrey;
-    color:goldenrod;
+    background-color:peachpuff;
+    color: olive;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
